@@ -29,6 +29,7 @@
 <a href=pygame_mixer_music.html>mixer_music</a> ||<br>
 || <a href=pygame_mouse.html>mouse</a> || 
 <a href=pygame_movie.html>movie</a> || 
+<a href=pygame_sndarray.html>sndarray</a> || 
 <a href=pygame_surfarray.html>surfarray</a> || 
 <a href=pygame_time.html>time</a> || 
 <a href=pygame_transform.html>transform</a> ||<br>
